新增轮播数据管理功能，包括同步、添加、更新和删除操作。