@@ -1,12 +1,15 @@
 package com.jjg.game.gm.util;
 
 import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.apache.commons.codec.digest.DigestUtils;
 import org.bouncycastle.asn1.pkcs.PrivateKeyInfo;
 import org.bouncycastle.jce.provider.BouncyCastleProvider;
 import org.bouncycastle.openssl.PEMParser;
 import org.bouncycastle.openssl.jcajce.JcaPEMKeyConverter;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import javax.crypto.Cipher;
 import java.nio.charset.StandardCharsets;
@@ -22,11 +25,14 @@ import java.util.Objects;
 
 /**
  * gm请求加密,解密工具
+ *
  * @author lm
  * @date 2025/7/11 11:11
  */
 public class CryptoUtils {
     private static final PrivateKey privateKey;
+
+    private static final Logger log = LoggerFactory.getLogger(CryptoUtils.class);
 
     static {
         Security.addProvider(new BouncyCastleProvider());
@@ -80,9 +86,11 @@ public class CryptoUtils {
 
     public static String getDecryptRequest(String request) throws Exception {
         ObjectMapper objectMapper = new ObjectMapper();
-        Map<String, Object> map = objectMapper.readValue(request, new TypeReference<>() {
+        Map<String, JsonNode> map = objectMapper.readValue(request, new TypeReference<>() {
         });
-        String sign = (String) map.remove("sign");
+        String sign = map.remove("sign").asText();
+        log.debug("getDecryptRequest request={}", request);
+        log.debug("getDecryptRequest map={}", map);
         if (Objects.isNull(sign)) {
             return null;
         }
@@ -94,51 +102,99 @@ public class CryptoUtils {
         return null;
     }
 
-    private static String getMd5String(Map<String, Object> map) {
+    private static String getMd5String(Map<String, JsonNode> map) {
         List<String> keyList = map.keySet().stream().sorted().toList();
         StringBuilder builder = new StringBuilder();
         for (String key : keyList) {
-            Object value = map.get(key);
-            if (Objects.nonNull(value)) {
-                builder.append(key)
-                        .append("=")
-                        .append(value.toString().trim());
-                if (!key.equals(keyList.get(keyList.size() - 1))) {
+            JsonNode value = map.get(key);
+            // 跳过null值，与客户端逻辑一致
+            if (value == null || value.isNull()) {
+                continue;
+            }
+            // 处理不同类型的值，与客户端逻辑一致
+            String valueStr = formatValueForSign(value);
+            if (valueStr != null) {
+                builder.append(key).append("=").append(valueStr);
+                if (!key.equals(keyList.getLast())) {
                     builder.append("&");
                 }
             }
         }
+        log.debug("getMd5String builder.toString()={}", builder);
         return DigestUtils.md5Hex(builder.toString()).toUpperCase();
+    }
+
+    /**
+     * 格式化值以匹配PHP客户端的处理逻辑
+     */
+    private static String formatValueForSign(JsonNode value) {
+        if (value.isNull()) {
+            return null; // 返回null表示跳过该字段
+        } else if (value.isArray() || value.isObject()) {
+            // 数组或对象转换为JSON字符串
+            try {
+                ObjectMapper mapper = new ObjectMapper();
+                return mapper.writeValueAsString(value);
+            } catch (Exception e) {
+                return value.toString();
+            }
+        } else {
+            // 基本类型直接转换为字符串
+            return value.asText();
+        }
     }
 
     public static void main(String[] args) throws Exception {
         PrivateKey privateKey = CryptoUtils.loadPrivateKey(Path.of(System.getProperty("user.dir"), "/config/private_key.pem"));
         PublicKey publicKey = CryptoUtils.loadPublicKey(Path.of(System.getProperty("user.dir"), "/config/public_key.pem"));
-        String data = """
-                {"number":8888888,"open":0,"status":0,"right_top_icon":"new"}""";
+
+        // 测试与PHP客户端兼容的验签
+        String testData = """
+                {"activityImageType":"1","sourceName":"123.png","jumpType":1,"jumpValue":"200500","sort":55,"showType":null,"id":9}""";
+
+        System.out.println("=== 测试与PHP客户端兼容的验签 ===");
+        System.out.println("原始数据: " + testData);
+
         ObjectMapper objectMapper = new ObjectMapper();
-        Map<String, Object> map = objectMapper.readValue(data, new TypeReference<>() {
+        Map<String, JsonNode> map = objectMapper.readValue(testData, new TypeReference<>() {
         });
+
+        // 模拟PHP客户端的签名过程
+        System.out.println("\n模拟PHP客户端签名过程:");
         List<String> keyList = map.keySet().stream().sorted().toList();
-        StringBuilder builder = new StringBuilder();
+        StringBuilder phpBuilder = new StringBuilder();
         for (String key : keyList) {
-            Object value = map.get(key);
-            if (Objects.nonNull(value)) {
-                builder.append(key)
-                        .append("=")
-                        .append(value);
-                if (!key.equals(keyList.get(keyList.size() - 1))) {
-                    builder.append("&");
+            JsonNode value = map.get(key);
+            if (value != null && !value.isNull()) {
+                String valueStr = formatValueForSign(value);
+                if (valueStr != null) {
+                    phpBuilder.append(key).append("=").append(valueStr).append("&");
                 }
             }
         }
-        System.out.println(builder);
-        String md5String = DigestUtils.md5Hex(builder.toString()).toUpperCase();
-        System.out.println(md5String);
+        String phpStr = phpBuilder.toString();
+        if (phpStr.endsWith("&")) {
+            phpStr = phpStr.substring(0, phpStr.length() - 1);
+        }
+        System.out.println("PHP签名字符串: " + phpStr);
+        String phpMd5 = DigestUtils.md5Hex(phpStr).toUpperCase();
+        System.out.println("PHP MD5: " + phpMd5);
 
-        String encrypt = CryptoUtils.encrypt(md5String, publicKey);
-        System.out.println(encrypt);
-        System.out.println(CryptoUtils.decrypt("""
-                deZaJ+FDs43K3UvieBuK5mlNznO3bz4hJo6dNhfMcG9qlP1l2LqPRRIMk8k4aGFnUEwVLLtAao9pVAdtEZ0iT4+wFEIEV9Vx8owlCpe/4K70Gttf8gWhhhFw14v/w9SH4Wt0vqRuR7ctjps26agW+ft5bYciLD6gFhSeZc/BfBjWLzZ1BzCCHoKcK0JUPm3ISS6OOqUFqZbnkbE0UDBxPTkTojB11OSE0a3iyovsjONPbd9I11kh9DUZgMiuDevWsT8w6ocNKnNSbJhQb248ZquiMKoQ803ZOCh3vTljY2nucEDVSkGqW9TRBYmvYV0fsWznSmigY1radl6N06QYDQ==""", privateKey));
+        // 测试服务端验签
+        String encrypt = CryptoUtils.encrypt(phpMd5, publicKey);
+        System.out.println("加密签名: " + encrypt);
+
+        // 构建带签名的请求
+        String requestWithSign = testData.substring(0, testData.length() - 1) + ",\"sign\":\"" + encrypt + "\"}";
+        System.out.println("\n带签名的请求: " + requestWithSign);
+
+        // 测试服务端验签
+        String result = getDecryptRequest(requestWithSign);
+        System.out.println("验签结果: " + result);
+
+        // 验证MD5是否匹配
+        String decrypt = decrypt(encrypt, privateKey);
+        System.out.println("解密得到的MD5: " + decrypt);
+        System.out.println("MD5是否匹配: " + phpMd5.equals(decrypt));
     }
 }
